content/azure/external_dns/ingress-argocd.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx-external
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # If you encounter a redirect loop or are getting a 307 response code 
    # then you need to force the nginx ingress to connect to the backend using HTTPS.
    #
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - host: argocd.svc.sudlice.org
    http:
      paths:
      - backend:
          serviceName: argo-argocd-server
          servicePort: https
        path: /
  tls:
  - hosts:
    - argocd.svc.sudlice.org
    secretName: certmanager-argocd-tls
